--- a/eazy-menue-backend/src/main/resources/application.properties
+++ b/eazy-menue-backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # datasource configuration
-# quarkus.datasource.db-kind = jdbc-oracle
-# quarkus.datasource.username = if170009
-# quarkus.datasource.password = Beniboy12
-# quarkus.datasource.jdbc.url = jdbc:oracle:thin:@delphi.htl-leonding.ac.at:1521:delphid
+quarkus.datasource.db-kind = oracle
+quarkus.datasource.jdbc.driver = oracle.jdbc.driver.OracleDriver
+quarkus.datasource.username = if170009
+quarkus.datasource.password = Beniboy12
+quarkus.datasource.jdbc.url = jdbc:oracle:thin:@delphi.htl-leonding.ac.at:1521:delphidb
 
 # drop and create the database at startup (use `update` to only update the schema)
-# quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=drop-and-create
