--- a/eazy-menue-backend/src/main/resources/application.properties
+++ b/eazy-menue-backend/src/main/resources/application.properties
@@ -6,4 +6,4 @@ quarkus.datasource.password = Beniboy12
 quarkus.datasource.jdbc.url = jdbc:oracle:thin:@delphi.htl-leonding.ac.at:1521:delphidb
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=drop-and-create
+# quarkus.hibernate-orm.database.generation=drop-and-create
