--- a/eazy-menue-backend/src/main/resources/application.properties
+++ b/eazy-menue-backend/src/main/resources/application.properties
@@ -5,5 +5,6 @@ quarkus.datasource.username = if170009
 quarkus.datasource.password = Beniboy12
 quarkus.datasource.jdbc.url = jdbc:oracle:thin:@delphi.htl-leonding.ac.at:1521:delphidb
 
-# drop and create the database at startup (use `update` to only update the schema)
-# quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:8083
+
