--- a/eazy-menue-android/Menuebestellung/app/build.gradle
+++ b/eazy-menue-android/Menuebestellung/app/build.gradle
@@ -102,4 +102,8 @@ dependencies {
 
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1")
 
+
+//    implementation project(':charts')
+    implementation('io.github.bytebeats:compose-charts:0.1.0')
+
 }
