--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,14 @@
 version: '3.1'
 services:
-#  backend:
-#    image: ghcr.io/musikfreunde/leocode-backend:25.0
-#    container_name: backend
-#    volumes:
-#      - projects-in-queue:../../projects-in-queue
-#    environment:
-#      - QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://postgres-db:5432/db
-#      - QUARKUS_HTTP_CORS_METHODS=*
-#      - QUARKUS_HTTP_CORS=true
-#      - QUARKUS_HTTP_CORS_ORIGINS=*
-#      - QUARKUS_HTTP_CORS_HEADERS=*
-#      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-#    depends_on:
-#      - postgres-db
-#      - kafka
-#    ports:
-#      - "8181:9090"
-#    networks:
-#      - quarkus
+  backend:
+    image: ghcr.io/musikfreunde/eazy-menue-backend:latest
+    depends_on:
+      - postgres-db
+      - kafka
+    ports:
+      - 8080:8080
+    networks:
+      - quarkus
   identity-provider:
     image: jboss/keycloak:14.0.0
     volumes:
@@ -31,6 +21,15 @@ services:
     ports:
       - 8082:8080
     container_name: eazymenu-identity-provider
+    networks:
+      - quarkus
+  frontend:
+    image: ghcr.io/musikfreunde/eazy-menue-frontend:latest
+    depends_on:
+      - identity-provider
+      - backend
+    ports:
+      - 8083:8083
     networks:
       - quarkus
 networks:
