--- a/eazy-menue-android/Menuebestellung/app/build.gradle
+++ b/eazy-menue-android/Menuebestellung/app/build.gradle
@@ -69,8 +69,12 @@ dependencies {
 
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+
+    //okhttp
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
@@ -105,5 +109,8 @@ dependencies {
 
 //    implementation project(':charts')
     implementation('io.github.bytebeats:compose-charts:0.1.0')
+
+
+
 
 }
