--- a/.github/workflows/PI.yml
+++ b/.github/workflows/PI.yml
@@ -36,20 +36,19 @@ jobs:
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo ${{ github.ref }} | cut -c11-)
-          [ "$VERSION" == "master" ] && VERSION=latest
+          VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
-  build_testing:
+  build_frontend:
     name: Build frontend
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: eazy-menue-frontend
     defaults:
       run:
-        working-directory: ./eazymenue-frontend
+        working-directory: ./eazymenu-frontend
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -65,8 +64,7 @@ jobs:
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo ${{ github.ref }} | cut -c11-)
-          [ "$VERSION" == "master" ] && VERSION=latest
+          VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
