--- a/keycloak_theme_new/login/theme.properties
+++ b/keycloak_theme_new/login/theme.properties
@@ -1,2 +1,10 @@
-parent=base
-styles=css/che-login.css
+parent=keycloak
+import=common/keycloak
+locales=de
+styles=css/login.css
+
+kcFeedbackErrorIcon=pficon pficon-error-circle-o
+kcFeedbackWarningIcon=pficon pficon-warning-triangle-o
+kcFeedbackSuccessIcon=pficon pficon-ok
+kcFeedbackInfoIcon=pficon pficon-info
+
