--- a/eazy-menue-backend/pom.xml
+++ b/eazy-menue-backend/pom.xml
@@ -72,6 +72,12 @@
       <artifactId>quarkus-jdbc-oracle</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.intuit.karate</groupId>
+      <artifactId>karate-junit5</artifactId>
+      <version>1.1.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.17.2</version>
