--- a/eazy-menue-backend/pom.xml
+++ b/eazy-menue-backend/pom.xml
@@ -78,6 +78,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.17.2</version>
