--- a/eazy-menue-backend/src/main/resources/application.properties
+++ b/eazy-menue-backend/src/main/resources/application.properties
@@ -8,3 +8,5 @@ quarkus.datasource.jdbc.url = jdbc:oracle:thin:@delphi.htl-leonding.ac.at:1521:d
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:8083
 
+quarkus.swagger-ui.always-include=true
+
